updated validation results with more sample size plots

--- a/results/validate_d21.Rmd
+++ b/results/validate_d21.Rmd
@@ -382,7 +382,7 @@ if(length(mdes.file) == 0)
 {
   d2.1_m2fc_mdes_D1_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d2.1_m2fc_mdes_D1_results,
+    d2.1_m2fc_mdes_D1_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -403,7 +403,7 @@ if(length(mdes.file) == 0)
 {
   d2.1_m2ff_mdes_D1_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d2.1_m2ff_mdes_D1_results,
+    d2.1_m2ff_mdes_D1_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )    
@@ -428,7 +428,7 @@ if(length(mdes.file) == 0)
 {
   d2.1_m2fr_mdes_D1_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d2.1_m2fr_mdes_D1_results,
+    d2.1_m2fr_mdes_D1_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -439,7 +439,11 @@ if(length(mdes.file) == 0)
 # Sample size validation
 
 
-Target value: `r model.params.list[['J']]`
+Target values:
+
+- J = `r model.params.list[['J']]`
+- K = `r model.params.list[['K']]`
+- nbar = `r model.params.list[['nbar']]`
 
 ```{r 2c_sampleD1_J}
 d_m <- "d2.1_m2fc"
@@ -453,15 +457,11 @@ if(length(sample.file) == 0)
 {
   d2.1_m2fc_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.1_m2fc_sample_D1_J_results,
+    d2.1_m2fc_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
-```
-
-```{r, include = FALSE}
-kable(d2.1_m2fc_sample_D1_J_results, format = 'latex', digits = 3)
 ```
 
 ```{r 2c_sampleD1_nbar}
@@ -476,7 +476,7 @@ if(length(sample.file) == 0)
 {
   d2.1_m2fc_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.1_m2fc_sample_D1_nbar_results,
+    d2.1_m2fc_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -495,15 +495,13 @@ if(length(sample.file) == 0)
 {
   d2.1_m2ff_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.1_m2ff_sample_D1_J_results,
+    d2.1_m2ff_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
 ```
 
-
-Target value: `r model.params.list[['nbar']]`
 
 ```{r 2f_sampleD1_nbar}
 d_m <- "d2.1_m2ff"
@@ -517,7 +515,7 @@ if(length(sample.file) == 0)
 {
   d2.1_m2ff_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.1_m2ff_sample_D1_nbar_results,
+    d2.1_m2ff_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -537,7 +535,7 @@ if(length(sample.file) == 0)
 {
   d2.1_m2fr_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.1_m2fr_sample_D1_J_results,
+    d2.1_m2fr_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -556,7 +554,7 @@ if(length(sample.file) == 0)
 {
   d2.1_m2fr_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.1_m2fr_sample_D1_nbar_results,
+    d2.1_m2fr_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
