--- a/results/validate_d33.Rmd
+++ b/results/validate_d33.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
   cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE,
   fig.height = 7
 )
+set.seed(0408)
 ```
 
 ```{r setup}
@@ -296,7 +297,7 @@ if(length(mdes.file) == 0)
 {
   d3.3_m3rc2rc_mdes_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_mdes_results,
+    d3.3_m3rc2rc_mdes_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -318,7 +319,7 @@ if(length(sample.file) == 0)
 {
   d3.3_m3rc2rc_sample_D1_K_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_sample_D1_K_results,
+    d3.3_m3rc2rc_sample_D1_K_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -338,7 +339,7 @@ if(length(sample.file) == 0)
 {
   d3.3_m3rc2rc_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_sample_D1_J_results,
+    d3.3_m3rc2rc_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -348,8 +349,10 @@ if(length(sample.file) == 0)
 The target power cannot be achieved with the conservative Bonferroni correction.
 For other corrections, the power curve is very flat.
 
+For `MTP = "BH"`:
+
 ```{r, results = 'hide', fig.width=5, fig.height=4}
-set.seed(343059)
+
 smp <- PUMP::pump_sample(
   d_m = "d3.3_m3rc2rc",
   MTP = 'BH',
@@ -358,7 +361,7 @@ smp <- PUMP::pump_sample(
   M = model.params.list[['M']],
   nbar = model.params.list[['nbar']],
   K = model.params.list[['K']],
-  target.power = 0.152,
+  target.power = 0.29,
   power.definition = 'D1indiv',
   numCovar.1 = model.params.list[['numCovar.1']],
   numCovar.2 = model.params.list[['numCovar.2']],
@@ -375,8 +378,9 @@ smp <- PUMP::pump_sample(
   alpha = 0.05,
   verbose = TRUE
 )
-plot_power_curve(smp)
+plot(smp)
 ```
+
 
 Target value: `r model.params.list[['nbar']]`
 
@@ -391,25 +395,28 @@ if(length(sample.file) == 0)
 {
   d3.3_m3rc2rc_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_sample_D1_nbar_results,
+    d3.3_m3rc2rc_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
 ```
 
+Sometimes, the power cannot be achieved even with a very large sample size.
+
+For `MTP = "BF"`:
 
 ```{r, results = 'hide', fig.width=5, fig.height=4}
 set.seed(343059)
 smp <- PUMP::pump_sample(
   d_m = "d3.3_m3rc2rc",
-  MTP = 'BH',
+  MTP = 'BF',
   typesample = 'nbar',
   MDES = model.params.list[['MDES']],
   M = model.params.list[['M']],
   J = model.params.list[['J']],
   K = model.params.list[['K']],
-  target.power = 0.279,
+  target.power = 0.211,
   power.definition = 'D1indiv',
   numCovar.1 = model.params.list[['numCovar.1']],
   numCovar.2 = model.params.list[['numCovar.2']],
@@ -426,5 +433,70 @@ smp <- PUMP::pump_sample(
   alpha = 0.05,
   verbose = TRUE
 )
-plot_power_curve(smp)
+plot(smp)
+```
+
+For `MTP = "BH"`:
+
+```{r, results = 'hide', fig.width=5, fig.height=4}
+set.seed(343059)
+smp <- PUMP::pump_sample(
+  d_m = "d3.3_m3rc2rc",
+  MTP = 'BH',
+  typesample = 'nbar',
+  MDES = model.params.list[['MDES']],
+  M = model.params.list[['M']],
+  J = model.params.list[['J']],
+  K = model.params.list[['K']],
+  target.power = 0.282,
+  power.definition = 'D1indiv',
+  numCovar.1 = model.params.list[['numCovar.1']],
+  numCovar.2 = model.params.list[['numCovar.2']],
+  numCovar.3 = model.params.list[['numCovar.3']],
+  R2.1 = model.params.list[['R2.1']],
+  R2.2 = model.params.list[['R2.2']],
+  R2.3 = model.params.list[['R2.3']],
+  ICC.2 = model.params.list[['ICC.2']],
+  ICC.3 = model.params.list[['ICC.3']],
+  rho = model.params.list[['rho.default']],
+  omega.2 = model.params.list[['omega.2']],
+  omega.3 = model.params.list[['omega.3']],
+  Tbar = 0.5,
+  alpha = 0.05,
+  verbose = TRUE
+)
+plot(smp)
+```
+
+
+For `MTP = "HO"`:
+
+```{r, results = 'hide', fig.width=5, fig.height=4}
+set.seed(343059)
+smp <- PUMP::pump_sample(
+  d_m = "d3.3_m3rc2rc",
+  MTP = 'BH',
+  typesample = 'nbar',
+  MDES = model.params.list[['MDES']],
+  M = model.params.list[['M']],
+  J = model.params.list[['J']],
+  K = model.params.list[['K']],
+  target.power = 0.282,
+  power.definition = 'D1indiv',
+  numCovar.1 = model.params.list[['numCovar.1']],
+  numCovar.2 = model.params.list[['numCovar.2']],
+  numCovar.3 = model.params.list[['numCovar.3']],
+  R2.1 = model.params.list[['R2.1']],
+  R2.2 = model.params.list[['R2.2']],
+  R2.3 = model.params.list[['R2.3']],
+  ICC.2 = model.params.list[['ICC.2']],
+  ICC.3 = model.params.list[['ICC.3']],
+  rho = model.params.list[['rho.default']],
+  omega.2 = model.params.list[['omega.2']],
+  omega.3 = model.params.list[['omega.3']],
+  Tbar = 0.5,
+  alpha = 0.05,
+  verbose = TRUE
+)
+plot(smp)
 ```
