--- a/results/summary.Rmd
+++ b/results/summary.Rmd
@@ -59,7 +59,6 @@ get.d_m.power.results <- function(d_m, power.files)
   d_m.results <- NULL
   for(file in results.files)
   {
-    print(file)
     results <- readRDS(here::here('output', file))
 
     results.wide <- results %>%
@@ -69,13 +68,6 @@ get.d_m.power.results <- function(d_m, power.files)
   }
 
   row.names(d_m.results) <- NULL
-  # d_m.results %<>% mutate(
-  #   cover =
-  #     Sim_ci_lower <= PUMP_adjusted_power &
-  #     Sim_ci_upper >= PUMP_adjusted_power,
-  #   bias.sim = abs(Sim_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power,
-  #   bias.pow = abs(PowerUp_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power
-  # )
   d_m.results %<>% mutate(
     cover =
       Sim_ci_lower <= PUMP_adjusted_power &
@@ -114,7 +106,6 @@ d_m.list <- c(
 all.power.results <- NULL
 for(d_m in d_m.list)
 {
-  print(d_m)
   d_m.results <- get.d_m.power.results(d_m, main.power.files)
   all.power.results <- rbind(all.power.results, d_m.results)
 }
@@ -163,14 +154,22 @@ for(scenario in d_m.list)
 # Coverage discrepancies
 
 We summarize below the scenarios where the simulation intervals do not cover the PUMP value.
-For brevity, we only display results for Bonferroni adjustments, because 
-```{r, results = 'asis'}
+For brevity, we only display results for Bonferroni adjustments.
+```{r}
 # extract out problem rows
 problems <- all.power.results[
   !is.na(all.power.results$cover) &
   all.power.results$cover != 1 &
   all.power.results$agree,
 ]
+
+problem.scenarios <- unique(problems[,
+  c('d_m', 'numZero', 'J', 'K', 'nbar', 'omega.2', 'omega.3',
+    'R2.1', 'R2.2', 'R2.3', 'ICC.2', 'ICC.3', 'rho')])
+print(problem.scenarios)
+```
+
+```{r, results = 'asis'}
 problems <- problems %>%
   dplyr::select(d_m, MTP, power_type, omega.2, omega.3, ICC.2, ICC.3, 
          PUMP_adjusted_power, PowerUp_adjusted_power, Sim_adjusted_power,
@@ -195,6 +194,62 @@ for(scenario in d_m.list)
   }
 }
 ```
+
+```{r}
+sim.params.list <- list(
+  S = 5000                    # Number of samples for Monte Carlo Simulation
+  , B = NULL                 # Number of samples for WestFall-Young. The equivalent is snum in our new method.
+  , alpha = 0.05             # Significance level
+  , tol = 0.01               # tolerance for MDES and sample  size calculations
+  , Tbar = 0.5               # Binomial assignment probability
+  , tnum = 10000             # Number of test statistics (samples) for all procedures other than Westfall-Young
+  , parallel = TRUE          # parallelize within each monte carlo iteration
+  , ncl = 8                  # Number of computer clusters
+  , start.tnum = 200         # number of iterations for starting to testing mdes and power
+  , final.tnum = 100000      # final number of iterations to check power
+  , max.steps = 20           # maximum number of iterations for MDES or sample size calculations
+  , max.cum.tnum = 10000000  # maximum cumulative tnum for MDES and sample size
+  , MTP = c("BF", "BH", "HO") # Multiple testing procedures
+  , runSim = FALSE       # If TRUE, we will re-run the simulation. If FALSE, we will pull previous run result.
+  , runPump = TRUE    # If TRUE, we will run method from our package. If FALSE, we will pull previous run result.
+  , runPowerUp = TRUE    # If TRUE, we will run method from powerup. If FALSE, we will pull previous run result.
+)
+```
+
+
+```{r}
+M <- 3
+model.params.list <- list(
+  M = 3                                   # number of outcomes
+  , J = 30                                # number of schools
+  , K = 10                                # number of districts (for two-level model, set K = 1)
+  , nbar = 50                             # number of individuals per school
+  , rho.default = 0.5                     # default rho value
+  , MDES = rep(0.125, M)                  # minimum detectable effect size      
+  , ICC.3 = rep(0.7, M)                   # district intraclass correlation
+  , omega.3 = rep(0.1, M)                 # ratio of district effect size variability to random effects variability
+  , numCovar.2 = 1                        # number of school covariates
+  , R2.2 = rep(0.1, M)                    # percent of school variation explained by school covariates
+  , ICC.2 = rep(0.2, M)                   # school intraclass correlation	
+  , numCovar.1 = 1                        # number of individual covariates
+  , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
+)
+d_m <- "d3.2_m3rr2rc"
+plot1 <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(plot1)
+
+model.params.list$ICC.3 <- rep(0.2, M)
+model.params.list$R2.2 <- rep(0.6, M)
+plot2 <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(plot2)
+
+model.params.list$ICC.3 <- rep(0.2, M)
+model.params.list$R2.2 <- rep(0.6, M)
+model.params.list$J <- 50
+plot3 <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(plot3)
+```
+
 
 \clearpage
 \newpage
@@ -234,6 +289,23 @@ kable(bias.results.summary, booktabs = TRUE, row.names = FALSE, digits = 3)
 # WY Summary
 
 ```{r}
+# subset down to WY results which we know are "valid" to get accurate estimates
+# e.g. if B is too small, or J or K are too small and don't validate,
+# exclude those
+wy.power.files <- c(
+   "d2.1_m2fc_2000_S_3_M_1000_B_005005005_MDES_60_J_1_K_30_nbar_05_rho__omega2__omega3_010101_R21__R22__R23_020202_ICC2__ICC3_comparison_power_results.RDS",                               
+  "d2.1_m2ff_2000_S_3_M_1000_B_005005005_MDES_60_J_1_K_30_nbar_05_rho_010101_omega2__omega3_010101_R21__R22__R23_020202_ICC2__ICC3_comparison_power_results.RDS",                       
+  "d2.1_m2fr_2000_S_3_M_1000_B_005005005_MDES_60_J_1_K_30_nbar_05_rho_010101_omega2__omega3_010101_R21__R22__R23_020202_ICC2__ICC3_comparison_power_results.RDS",                    
+  "d2.2_m2rc_2000_S_3_M_1000_B_025025025_MDES_60_J_1_K_50_nbar_05_rho__omega2__omega3_010101_R21_010101_R22__R23_010101_ICC2__ICC3_comparison_power_results.RDS",                     
+  "d3.1_m3rr2rr_600_S_3_M_2000_B_012501250125_MDES_10_J_10_K_100_nbar_05_rho_005005005_omega2_005005005_omega3_010101_R21__R22__R23_010101_ICC2_010101_ICC3_comparison_power_results.RDS",
+  "d3.2_m3ff2rc_1000_S_3_M_2000_B_025025025_MDES_5_J_10_K_50_nbar_05_rho__omega2__omega3_040404_R21_040404_R22_040404_R23_010101_ICC2_010101_ICC3_comparison_power_results.RDS",    
+  "d3.2_m3rr2rc_600_S_3_M_3000_B_012501250125_MDES_20_J_20_K_75_nbar_05_rho__omega2_005005005_omega3_020202_R21_020202_R22_020202_R23_020202_ICC2_020202_ICC3_comparison_power_results.RDS",
+  "d3.3_m3rc2rc_600_S_3_M_3000_B_030303_MDES_20_J_20_K_100_nbar_05_rho__omega2__omega3_040404_R21_040404_R22_040404_R23_005005005_ICC2_005005005_ICC3_comparison_power_results.RDS"     
+)
+```
+
+
+```{r}
 wy.power.results <- NULL
 for(d_m in d_m.list)
 {
@@ -242,6 +314,9 @@ for(d_m in d_m.list)
 }
 wy.power.results <- wy.power.results[wy.power.results$MTP %in% c('WY-SS', 'WY-SD'),]
 ```
+
+
+
 
 
 ```{r}
