--- a/results/validate_d22.Rmd
+++ b/results/validate_d22.Rmd
@@ -259,7 +259,7 @@ if(length(mdes.file) == 0)
 {
   d2.2_m2rc_mdes_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d2.2_m2rc_mdes_results,
+    d2.2_m2rc_mdes_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -268,7 +268,11 @@ if(length(mdes.file) == 0)
 \newpage
 # Sample size validation
 
-Target value: `r model.params.list[['J']]`
+Target values:
+
+- J = `r model.params.list[['J']]`
+- K = `r model.params.list[['K']]`
+- nbar = `r model.params.list[['nbar']]`
 
 ```{r 2r_sampleD1_J}
 d_m <- "d2.2_m2rc"
@@ -281,14 +285,12 @@ if(length(sample.file) == 0)
 {
   d2.2_m2rc_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.2_m2rc_sample_D1_J_results,
+    d2.2_m2rc_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
 ```
-
-Target value: `r model.params.list[['nbar']]`
 
 ```{r 2r_sampleD1_nbar}
 d_m <- "d2.2_m2rc"
@@ -301,7 +303,7 @@ if(length(sample.file) == 0)
 {
   d2.2_m2rc_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d2.2_m2rc_sample_D1_nbar_results,
+    d2.2_m2rc_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -313,7 +315,7 @@ Note: particularly flat power curves results in discrepancy for `nbar`.
 ```{r, results = 'hide', fig.width=5, fig.height=4}
 smp <- PUMP::pump_sample(
   d_m = "d2.2_m2rc",
-  MTP = 'BF',
+  MTP = "BH",
   typesample = 'nbar',
   MDES = model.params.list[['MDES']],
   M = model.params.list[['M']],
@@ -336,5 +338,7 @@ smp <- PUMP::pump_sample(
   alpha = 0.05,
   verbose = TRUE
 )
-plot_power_curve(smp)
+plot(smp)
 ```
+
+
