--- a/results/validate_d32.Rmd
+++ b/results/validate_d32.Rmd
@@ -501,7 +501,7 @@ if(length(mdes.file) == 0)
 {
   d3.2_m3ff2rc_mdes_D1_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d3.2_m3ff2rc_mdes_D1_results,
+    d3.2_m3ff2rc_mdes_D1_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -520,7 +520,7 @@ if(length(mdes.file) == 0)
 {
   d3.2_m3rr2rc_mdes_D1_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d3.2_m3rr2rc_mdes_D1_results,
+    d3.2_m3rr2rc_mdes_D1_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -544,7 +544,7 @@ if(length(sample.file) == 0)
 {
   d3.2_m3ff2rc_sample_D1_K_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.2_m3ff2rc_sample_D1_K_results,
+    d3.2_m3ff2rc_sample_D1_K_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -565,7 +565,7 @@ if(length(sample.file) == 0)
 {
   d3.2_m3ff2rc_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.2_m3ff2rc_sample_D1_J_results,
+    d3.2_m3ff2rc_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -586,12 +586,77 @@ if(length(sample.file) == 0)
 {
   d3.2_m3ff2rc_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.2_m3ff2rc_sample_D1_nbar_results,
+    d3.2_m3ff2rc_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
 ```
+
+For `MTP = "BH"`:
+
+```{r, results = 'hide', fig.width=5, fig.height=4}
+model.params.list[['omega.3']] <- NULL
+smp <- PUMP::pump_sample(
+  d_m = "d3.2_m3ff2rc",
+  MTP = 'BH',
+  typesample = 'nbar',
+  MDES = model.params.list[['MDES']],
+  M = model.params.list[['M']],
+  J = model.params.list[['J']],
+  K = model.params.list[['K']],
+  target.power = 0.64,
+  power.definition = 'D1indiv',
+  numCovar.1 = model.params.list[['numCovar.1']],
+  numCovar.2 = model.params.list[['numCovar.2']],
+  numCovar.3 = 1,
+  R2.1 = model.params.list[['R2.1']],
+  R2.2 = model.params.list[['R2.2']],
+  R2.3 = model.params.list[['R2.3']],
+  ICC.2 = model.params.list[['ICC.2']],
+  ICC.3 = model.params.list[['ICC.3']],
+  rho = model.params.list[['rho.default']],
+  omega.2 = model.params.list[['omega.2']],
+  omega.3 = model.params.list[['omega.3']],
+  Tbar = 0.5,
+  alpha = 0.05,
+  verbose = TRUE
+)
+plot(smp)
+```
+
+For `MTP = "HO"`:
+
+```{r, results = 'hide', fig.width=5, fig.height=4}
+model.params.list[['omega.3']] <- NULL
+smp <- PUMP::pump_sample(
+  d_m = "d3.2_m3ff2rc",
+  MTP = "HO",
+  typesample = 'nbar',
+  MDES = model.params.list[['MDES']],
+  M = model.params.list[['M']],
+  J = model.params.list[['J']],
+  K = model.params.list[['K']],
+  target.power = 0.613,
+  power.definition = 'D1indiv',
+  numCovar.1 = model.params.list[['numCovar.1']],
+  numCovar.2 = model.params.list[['numCovar.2']],
+  numCovar.3 = 1,
+  R2.1 = model.params.list[['R2.1']],
+  R2.2 = model.params.list[['R2.2']],
+  R2.3 = model.params.list[['R2.3']],
+  ICC.2 = model.params.list[['ICC.2']],
+  ICC.3 = model.params.list[['ICC.3']],
+  rho = model.params.list[['rho.default']],
+  omega.2 = model.params.list[['omega.2']],
+  omega.3 = model.params.list[['omega.3']],
+  Tbar = 0.5,
+  alpha = 0.05,
+  verbose = TRUE
+)
+plot(smp)
+```
+
 
 Target value: `r model.params.list[['K']]`
 
@@ -607,7 +672,7 @@ if(length(sample.file) == 0)
 {
   d3.2_m3rr2rc_sample_D1_K_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.2_m3rr2rc_sample_D1_K_results,
+    d3.2_m3rr2rc_sample_D1_K_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -627,7 +692,7 @@ if(length(sample.file) == 0)
 {
   d3.2_m3rr2rc_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.2_m3rr2rc_sample_D1_J_results,
+    d3.2_m3rr2rc_sample_D1_J_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -650,7 +715,7 @@ if(length(sample.file) == 0)
 {
   d3.2_m3rr2rc_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.2_m3rr2rc_sample_D1_nbar_results,
+    d3.2_m3rr2rc_sample_D1_nbar_results[,1:4],
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -658,8 +723,9 @@ if(length(sample.file) == 0)
 ```
 
 
+For `MTP = BH`:
+
 ```{r, results = 'hide', fig.width=5, fig.height=4}
-set.seed(343059)
 smp <- PUMP::pump_sample(
   d_m = "d3.2_m3rr2rc",
   MTP = 'BH',
@@ -668,7 +734,39 @@ smp <- PUMP::pump_sample(
   M = model.params.list[['M']],
   J = model.params.list[['J']],
   K = model.params.list[['K']],
-  target.power = 0.233,
+  target.power = 0.232,
+  power.definition = 'D1indiv',
+  numCovar.1 = model.params.list[['numCovar.1']],
+  numCovar.2 = model.params.list[['numCovar.2']],
+  numCovar.3 = 1,
+  R2.1 = model.params.list[['R2.1']],
+  R2.2 = model.params.list[['R2.2']],
+  R2.3 = model.params.list[['R2.3']],
+  ICC.2 = model.params.list[['ICC.2']],
+  ICC.3 = model.params.list[['ICC.3']],
+  rho = model.params.list[['rho.default']],
+  omega.2 = model.params.list[['omega.2']],
+  omega.3 = model.params.list[['omega.3']],
+  Tbar = 0.5,
+  alpha = 0.05,
+  verbose = TRUE
+)
+plot(smp)
+```
+
+
+For `MTP = HO`:
+
+```{r, results = 'hide', fig.width=5, fig.height=4}
+smp <- PUMP::pump_sample(
+  d_m = "d3.2_m3rr2rc",
+  MTP = 'HO',
+  typesample = 'nbar',
+  MDES = model.params.list[['MDES']],
+  M = model.params.list[['M']],
+  J = model.params.list[['J']],
+  K = model.params.list[['K']],
+  target.power = 0.202,
   power.definition = 'D1indiv',
   numCovar.1 = model.params.list[['numCovar.1']],
   numCovar.2 = model.params.list[['numCovar.2']],
