--- a/results/validate_wy.Rmd
+++ b/results/validate_wy.Rmd
@@ -164,7 +164,68 @@ d2.1_m2fr_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font
 print(d2.1_m2fr_power_plot)
 ```
 
+
+```{r}
+# try with high correlation and large number of outcomes
+M <- 10
+model.params.list <- list(
+  M = 10                                  # number of outcomes
+  , J = 30                                # number of schools
+  , K = 10                                # number of districts (for two-level model, set K = 1)
+  , nbar = 50                             # number of individuals per school
+  , rho.default = 0.85                    # default rho value
+  ################################################## grand mean outcome and impact
+  , MDES = rep(0.125, M)                  # minimum detectable effect size      
+  ################################################## level 3: districts
+  , ICC.2 = rep(0.2, M)                   # school intraclass correlation	
+  , omega.2 = rep(0.1, M)                 # ratio of school effect size variability to random effects variability
+  , kappa.u = matrix(0, M, M)             # MxM matrix of correlations between school random effects and impacts
+  ################################################## level 1: individuals
+  , numCovar.1 = 1                        # number of individual covariates
+  , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
+)
+```
+
 \newpage
+Constant effects, $M = 10$ and $\rho = 0.85$
+
+```{r}
+model.params.list[['omega.2']] <- NULL
+d_m <- "d2.1_m2fc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+d2.1_m2fc_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
+print(d2.1_m2fc_power_plot)
+```
+
+\newpage
+Fixed effects, $M = 10$ and $\rho = 0.85$
+
+```{r}
+model.params.list[['omega.2']] <- rep(0.1, M) 
+d_m <- "d2.1_m2ff"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+d2.1_m2ff_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
+print(d2.1_m2ff_power_plot)
+```
+
+\newpage
+Random effects, $M = 10$ and $\rho = 0.85$
+
+```{r}
+model.params.list[['omega.2']] <- rep(0.1, M) 
+d_m <- "d2.1_m2fr"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+d2.1_m2fr_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
+print(d2.1_m2fr_power_plot)
+```
+
+```{r}
+# reset
+M <- 3
+```
+
+\newpage
+
 # d2.2 models
 
 ```{r}
